kebob-case edit

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h><strong><em>Welcome!</em></strong></h>
         <hr />
     </header>
-    <main class="nameTag">
+    <main class="name-tag">
         <p class="greeting">hello</p>
         <p class="intro">my name is</p>
         <p class="name">parker sequeira</p>
