name change with button

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
         <hr />
     </header>
     <main class="name-tag">
-        <p class="greeting">hello</p>
-        <p class="intro">my name is</p>
-        <p class="name">parker sequeira</p>
+        <p id="greeting">hello</p>
+        <p id="intro">my name is</p>
+        <p id="name">Parker Sequeira</p>
+        <br>
+        <br>
+        <input id="newName">
+        <button id="changeName">Change Name</button>
         </main>
-
+<script src="app.js"></script>
 </body>
 </html>
