added color change, but bottom border broked

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
         <p id="name">Parker Sequeira</p>
         <br>
         <br>
-        <input id="newName">
-        <button id="changeName">Change Name</button>
+        <input  id="newName" class="new-name">
+        <button id="changeName" class="change-name">Change Name</button>
+        <button id="changeBlue" class="change-blue">Change color to Blue</button>
+        <button id="changeRed" class="change-red">Change color to Red</button>
+        <button id="changeGreen" class="change-green">Change color to Green</button>
         </main>
 <script src="app.js"></script>
 </body>
